--- a/views/blogs/new.ejs
+++ b/views/blogs/new.ejs
@@ -29,7 +29,7 @@
       </div>
 
       <div class="mb-2">
-        <label for="image" class="form-lable">Uplode File</label>
+        <label for="image" class="form-label">Uplode File</label>
         <input type="file" name="blog[image]" class="form-control" required />
       </div>
 
